2015-12-03 Michele Pinamonti <michele.pinamonti@gmail.com>
        * ReferenceSample option added for systematics (to derive syst relativly to a given sample)
        * Type::GHOST added for Sample => sample not shown enywhere, but used for systs with ReferenceSample option
        
2015-12-03 Calvet Thomas <calvet@cppm.in2p3.fr>
	* Merging trunk with devbranch
	
2015-12-02 Michele Pinamonti <michele.pinamonti@gmail.com>
        * IgnoreWeight option added for systematics (e.g. to avoid using pile-up weight for MC systematics)
        * Data not shown if Region has ASIMOVDATA
        * (thanks to Arthur) Fix Stat-only limit  and significance by adding a dummy NP
        * Fix fully blind limit
        
2015-12-01 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Region: Syst table output added: when running with option d, one table per region created
        * signals scaled by nominal NormFactor when plotting pre-fit
        
2015-11-30 Michele Pinamonti <michele.pinamonti@gmail.com>
        * StatOnly flag added (to "Fit" for the moment - actually it affects also Limit... To fix)
	
2015-11-25 - Loic Valery <lvalery@cern.ch>
        * Adding protection against initial numbers in names. Leads to crash if present (https://its.cern.ch/jira/browse/TTHFITTER-7)
	
2015-11-25 Loic Valery <lvalery@cern.ch>
        * Adding the partial blinding for fit, limits and significance
	
2015-11-24 Calvet Thomas <calvet@cppm.in2p3.fr>
	* Update to trunk
	* Add possibility to merge trees coming from same root file
	* Add config example for navigation in root files
	
2015-11-13 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Some functionalities added for individual sample scaling and to ignore selection
        * README: updated
        * config files moved to new config/ directory
        
2015-11-11 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fix by Arthur for more than one NtupleFiles (avoid problems when spaces are in between the ",")