@@ -11,7 +11,11 @@ Job: "FitExample"
 Fit: "myFit"
   FitType: SPLUSB
   FitRegion: CRSR
-  
+
+Limit: "limit"
+  LimitType: ASYMPTOTIC
+%  LimitBlind: TRUE
+
 Region: "SR_1"
 %   Type: SIGNAL
   Type: CONTROL
@@ -19,7 +23,7 @@ Region: "SR_1"
   VariableTitle: "H_{T} [GeV]"
   Label: "Signal Region 1"
   ShortLabel: "SR 1"
-  
+
 Sample: "Data"
   Title: "Data 2015"
   Type: data
