@@ -39,6 +39,15 @@ Fit: "FullFit"
 
 
 % --------------- %
+% ---  LIMIT  --- %
+% --------------- %
+
+Limit: "MyLimit"
+  LimitType: ASYMPTOTIC
+%  LimitBlind: TRUE
+
+
+% --------------- %
 % --- REGIONS --- %
 % --------------- %
   
