@@ -28,6 +28,15 @@ Fit: "FullFit"
   FitRegion: CRSR
 
 
+% --------------- %
+% ---  LIMIT    --- %
+% --------------- %
+
+Limit: "limit"
+  LimitType: ASYMPTOTIC
+%   LimitBlind: TRUE
+
+
 # % --------------- %
 # % --- REGIONS --- %
 # % --------------- %
