@@ -1,3 +1,7 @@
+2015-12-04 Loic Valery <lvalery@cern.ch>
+        * Fixing the fully blinded limits to be compatible when no data sample is there
+        * Adding the limit configuraiton in all the example config files
+
 2015-12-03 Michele Pinamonti <michele.pinamonti@gmail.com>
         * ReferenceSample option added for systematics (to derive syst relativly to a given sample)
         * Type::GHOST added for Sample => sample not shown enywhere, but used for systs with ReferenceSample option
